# smartring_rust

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
smartring-cli/: Cargo.toml
smartring-cli/src/: main.rs  output.rs
smartring-cli/src/commands/: get_heart_rate_log.rs  get_real_time.rs  get_steps.rs  hr_settings.rs  info.rs  mod.rs  raw.rs  reboot.rs  scan.rs  set_time.rs  sync.rs
smartring-core/: Cargo.toml
smartring-core/src/: ble.rs  client.rs  db.rs  device_info.rs  hr.rs  hr_settings.rs  lib.rs  migrate_python_to_v1.sql  packet.rs  real_time.rs  reboot.rs  set_time.rs  steps.rs
