[package]
name = "smartring-core"
description = "Protocol logic and BLE client for Colmi-family smart rings"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
btleplug.workspace = true
tokio.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
chrono.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
